# test

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/: settings.local.json
bangpick/: .env  .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
bangpick/api/: _aiProvider.js  _prompts.js  _redis.js  _stockData.js  chat.js  cron-check-alerts.js  cron-snapshot.js  food-detail.js  food-photo.js  food-search.js  food.js  stock-ai.js  stock-analyze.js  stock-batch.js  stock-data.js  stock-hot-sectors.js  stock-indices.js  stock-search.js  stock-test-sse.js  sync-code.js  sync.js
bangpick/e2e/: bangpick.spec.js  full-test.spec.js  location.spec.js
bangpick/src/: App.jsx  i18n.js  index.css  main.jsx
e2e/: full-flow.spec.js  regression.spec.js  stock.spec.js
scripts/: gen_recommendation.py  gen_word.py  md_to_docx.py
scripts/automate/: app.py  browser.py  contacts.json  router.py  utils.py  wechat.py
skills/app/: SKILL.md
skills/browser/: SKILL.md
skills/wechat/: SKILL.md
src/: App.jsx  index.css
src/components/: ChecklistItem.jsx  ChecklistView.jsx  FeedbackWidget.jsx  FileUpload.jsx  Layout.jsx  MarkdownEditor.jsx  ReportView.jsx  SortableFileList.jsx
src/hooks/: useChecklist.js
src/lib/: db.js  deepseek.js  export-doc.js  export-report.js  merge-ai.js  merge-prompt.js  pdf-parser.js  version-detect.js
src/pages/: ChecklistPage.jsx  HistoryPage.jsx  MergePage.jsx  PrivacyPage.jsx  SettingsPage.jsx  UploadPage.jsx
src/prompts/: acceptance-prompt.js
(+86 files in other folders)
