[project]
name = "mac-automate"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pyautogui>=0.9.54",
    "pyperclip>=1.8.2",
    "pyobjc-framework-Quartz>=10.0",
    "playwright>=1.58.0",
    "pillow>=11.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
